<resources>
    <string name="app_name">ibi</string>
    <string name="relation_status">Relation status</string>
    <string name="register">Register</string>
    <string name="questionprefix">You are at:</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="age_prompt">Select your age range</string>
    <string name="lonely">Single</string>
    <string name="partner">Partner</string>
    <string name="language">Language</string>
    <string name="gender_male">Man</string>
    <string name="gender_female">Woman</string>
    <string name="error_registing">There was an error with registering your info. Try it again later</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="tvRegister">Register</string>
    <string name="closequestion">Close</string>
    <string name="nextquestion">Next</string>
    <string name="save_credentials">Save info</string>
    <string name="et_answerinput">Select your answer here</string>
    <string name="no_buttons_checked">One of the fields has not been filled</string>
    <string name="no_answer_given">Give an answer</string>
    <string name="city">City</string>
    <string name="campaign">Campaign</string>
    <string name="begin_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="error_giving_answer">There was a problem with sending your answer. Try it again later</string>
    <string name="cannot_retrieve_questions">It\'s not possible to get any questions at the moment</string>
    <string name="error_gps_disconnected_title">The GPS connection has been lost</string>
    <string name="error_gps_disconnected_text">The GPS connection has been lost. Check your GPS settings and try it again</string>
    <string name="error_gps_failed_title">GPS error</string>
    <string name="error_gps_failed_text">There has been an error with connecting the GPS. Click here to re-activate the GPS</string>
    <string name="error_gps_disabled_title">GPS turned off</string>
    <string name="error_gps_disabled_text">The GPS has been turmed off. Click here to turn it on</string>
    <string name="error_loading_campaigns">Error with retrieving the campaigns</string>
    <string name="campaignnamecontainer">Campaign name</string>
    <string name="campaigndatecontainer">Start date: %1$s \nEnd date: %2$s</string>
    <string name="average_rating">Average score</string>
    <string name="gender">Gender</string>
    <string name="active_campaigns">Active campaigns</string>
    <string name="notification_channel_location_status_name">Location status</string>
    <string name="notification_channel_location_status_description">Notifications for location status</string>
    <string name="notification_channel_questions_name">Questions</string>
    <string name="notification_channel_questions_description">Notifications when new questions are available</string>
    <string name="thanks_for_entering_questions">Thanks for answering the questions!</string>
    <string name="remove_account">Remove my account</string>
    <string name="remove_account_failed">Failed trying to remove your account. Try it again later</string>
    <string name="remove_account_success">Successfully removed your account.</string>
    <string name="answers">| Answers</string>
    <string name="fields_not_filled"> All fields have not been filled!</string>
    <string name="you_are_at">You are at </string>
    <string name="few_questions">We have a feq questions about this location</string>
</resources>
