<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <FrameLayout
        android:id="@+id/fr_imageContainer"
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <ImageView
            android:id="@+id/iv_registerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/stad" />

        <ImageView
            android:id="@+id/iv_ibiParrot"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom|right"
            app:srcCompat="@drawable/ibiparrot" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fr_imageContainer"
        android:layout_centerHorizontal="true"
        android:text="@string/tvRegister"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_confirmRegister"
        android:layout_below="@+id/tv_registerLabel"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_registerBirthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_prompt"
                    android:textColor="#7F7F7F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/age_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ffffff" />

                <TextView
                    android:id="@+id/tv_registerGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="#7F7F7F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_genderButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_female" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tv_registerRelation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relation_status"
                    android:textColor="#7F7F7F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_relationButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/partner" />

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lonely" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tv_registerCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="#7F7F7F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_registerCity"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@drawable/roundcorners_next"
        android:text="@string/save_credentials"
        android:textColor="@android:color/white" />
</RelativeLayout>