<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fr_imageContainer"
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <ImageView
                android:id="@+id/iv_questionImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="92dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/stad" />

            <ImageView
                android:id="@+id/iv_ibiParrot"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="bottom|right"
                app:srcCompat="@drawable/ibiparrot" />

        </FrameLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_prefixLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/questionprefix"
                android:textColor="#7F7F7F"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_placeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="#7F7F7F"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <include
                            layout="@layout/activity_question_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:weightSum="100"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_closeQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_margin="10dp"
            android:background="@drawable/roundcorners_close"
            android:text="@string/closequestion"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_nextQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_margin="10dp"
            android:background="@drawable/roundcorners_next"
            android:text="@string/nextquestion"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>